# FastPimpl

./: CMakeLists.txt  README.md
src/: Example.h  main.cpp
utils/: FastPimpl.hpp
